--- a/Pagina Web/actividades.html
+++ b/Pagina Web/actividades.html
@@ -30,195 +30,95 @@
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
+                        <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
-                        <li class="header__nav-item"><a href="blog.html">Blog</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
+            <section class="hero">
+                <img src="img/image6.jpg" class="hero-img" alt="">
+                <div class="hero-info container">
+                    <h2>Actividades Eventes Presentaciones Artísticas</h2>
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicin
+                    elit. Veritatis hic quidem sint et deleniti in, offci
+                    reiciendis nostrum voluptatum sunt tenetur esse eligd
+                    fugit quis adipisci.</h4>
+                    </div>
+                </div>
+            </section>
             <section class="actividades__galery">
                 <div class="actividades__galery-list container">
                     <picture class="actividades__galery-item">
                         <img src="img/image.png" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Actuación</h3>
+                            <p>Lorem elit.ui, vel corporis aut fugit voluptati 
+                            ad? Corporis libero dolores quisquam odit temporib.
+                            ad? Corporis libero dolores quisquam odit temporib.</p>
+                            <h4>3 de Abril 2023</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image1.jpg" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Actuación</h3>
+                            <p>Lorem elit.ui, vel corporis aut fugit voluptati 
+                            ad? odit temporib.</p>
+                            <h4>12 de Marzo 2022</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image2.png" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Actuación</h3>
+                            <p>Lorem elit.ui, vel  aut fugit voluptati 
+                            ad? Corporis libero dolores quisquam odit temporib.</p>
+                            <h4>12 de Marzo 2022</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image3.jpg" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Presentación de Teatro</h3>
+                            <p>Lorem elit.ui, vel  aut fugit voluptati 
+                            ad? Corporis libero dolores quisquam odit temporib.
+                            ad? Corporis libero dolores quisquam odit temporib.
+                            ad? Corporis libero dolores quisquam odit temporib.
+                            ad? Corporis libero dolores quisquam odit temporib.</p>
+                            <h4>21 de Junio 2023</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image4.jpg" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Actuación</h3>
+                            <p>Lorem elit.ui, vel corporis aut fugit 
+                            ad? Corporis libero dolores  odit temporib.</p>
+                            <h4>12 de Marzo 2022</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image5.jpg" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Evento de Teatro</h3>
+                            <p>Lorem elit.ui, vel corporis aut fugit  
+                            ad? Corporis libero dolores quisquam odit temporib.</p>
+                            <h4>3 de Mayo 2025</h4>
+                        </div>
                     </picture>
                     <picture class="actividades__galery-item">
                         <img src="img/image6.jpg" class="actividades__galery-item-img" alt="">
+                        <div class="actividades__galery-item-info">
+                            <h3>Clases</h3>
+                            <p>Lorem elit.ui, vel corporis aut fugit  
+                            ad? Corporis libero dolores  odit.</p>
+                            <h4>3 de Mayo 2025</h4>
+                        </div>
                     </picture>
                 </div>
-            </section>
-            <section class="comentario">
-                <div class="comentario__container container">
-                    <ul class="comentario__list">
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario1.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>20 enero 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario3.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>18 diciembre 2022</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque cosjjsjsjsj
-                                snsjsjs sjs js sjsjs js sjjs s js js sjsjnsequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario1.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>20 enero 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario3.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>18 diciembre 2022</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque cosjjsjsjsj
-                                snsjsjs sjs js sjsjs js sjjs s js js sjsjnsequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <section class="faq container">
-                <h2 class="faq__title">Preguntas Frecuentes</h2>
-                <ul class="faq__list">
-                    <li class="faq__item">
-                        <input type="checkbox" id="p1">
-                        <label for="p1" class="faq__item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p2">
-                        <label for="p2" class="faq__item-title"><h3>¿Puedo adquirir una beca?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p3">
-                        <label for="p3" class="faq__item-title"><h3>¿Qué requisitos necesito para inscribirme?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p4">
-                        <label for="p4" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p5">
-                        <label for="p5" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p6">
-                        <label for="p6" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                </ul>
             </section>
         </main>
         <footer>
@@ -312,7 +212,7 @@
                 </ul>
             </div>
             <div class="footer__derechos">
-                <div class="container">
+                <div class="footer__derechos-container">
                     <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
                 </div>
             </div>
