--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -18,14 +18,6 @@
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
         </div>
-        <div class="inicio__hero" id="top">
-            <img src="img/image3.jpg" class="inicio__hero-img" alt="">
-            <div class="inicio__hero-info container">
-                <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
-                <h2>LUCES, CÁMARA Y ACCIÓN</h2>
-                <button class="inicio__hero-btn"><a href="#e"><img src="img/icon/arrow-next.svg" class="inicio__hero-icon" alt=""></a></button>
-            </div>
-        </div>
         <header>
             <div class="header container" id="e">
                 <input type="checkbox" class="header__checkbox" id="open-menu">
@@ -38,45 +30,46 @@
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
+                        <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
-                        <li class="header__nav-item"><a href="blog.html">Blog</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
-            <div class="scroll">
-                <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
-            </div>
+            <section class="hero">
+                <img src="img/image3.jpg" class="hero-img" alt="">
+                <div class="hero-info container">
+                    <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
+                    <h2>LUCES, CÁMARA Y ACCIÓN</h2>
+                </div>
+            </section>
             <section class="inicio__enfoque">
                 <div class="container">
                     <h2 class="inicio__enfoque-title">Nuestra Academia</h2>
-                    <p>LUCES CÁMARA Y ACCIÓN LUCES CÁMARA Y ACCIÓN ACCIÓN LUCESACCIÓN ACCIÓN LUCES<br>
+                    <p>LUCES CÁMARA Y ACCIÓN LUCES CÁMARA Y ACCIÓN
                     LUCES CÁMARA Y ACCIÓN CÁMARA Y ACCIÓN LUCES CÁMARA Y ACCIÓN</p>
                     <div  class="inicio__enfoque-list">
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/medal-award.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Actuación Profesional</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
                             </div>
                         </div>
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/ballerina-shoes.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Danza Multidisciplinaria</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
                             </div>
                         </div>
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/people-community.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Comunidad Artística</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
                             </div>
                         </div>
                     </div>
@@ -86,61 +79,65 @@
                 <img src="img/fondo textura cortina rojo.avif" class="inicio__nosotros-img" alt="">
                 <div class="inicio__nosotros-info container">
                     <h2>¿QUIENES SOMOS?</h2>
-                    <p>Lorem ipsum dolor amet conse fjfctetur adipi sicing
-                        ibusdam conse quatur, alias corp offi ciis Incidunt
-                        oris quidem praese ntium delectus accus antium quas
-                        d corrupti, veritatis, impedit prov ident sunt asp.</p>
+                    <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
+                    una institución dedicada a la formación artística integral y profesional. 
+                    Desde nuestra fundación, nos hemos comprometido a enriquecer el 
+                    patrimonio cultural de nuestra región, ofreciendo un espacio para el desarrollo del talento.</p>
                     <button class="btn-1"><a href="nosotros.html">Ver más</a></button>
                 </div>
-            </section>
-            <section class="inicio__programas">
-                <h2 class="inicio__programas-title">Conoce Nuestros Programas</h2>
-                <p>Conoce Nuestros Programas Conoce Nuestros Programas 
-                    Conoce Nuestros Programas Conoce Nuestros Programas</p>
-                <div class="inicio__programas-list container">
-                    <div class="inicio__programas-item">
-                        <img src="img/image1.jpg" class="inicio__programas-img" alt="">
-                        <button class="inicio__programas-btn">
-                            <a href="programas.html">Baby</a>
-                        </button>
-                    </div>
-                    <div class="inicio__programas-item">
-                        <img src="img/danza.jpg" class="inicio__programas-img" alt="">
-                        <button class="inicio__programas-btn">
-                            <a href="inicio__programas.html">Juvenil</a>
-                        </button>
-                    </div>
-                    <div class="inicio__programas-item">
-                        <img src="img/ChatGPT Image 22 jul 2025, 10_28_38 p.m..png" class="inicio__programas-img" alt="">
-                        <button class="inicio__programas-btn">
-                            <a href="programas.html">Elenco Avanzado</a>
-                        </button>
-                    </div>
-                </div>
-            </section>
-            <section class="inicio__actividades">
-                <h2>Presentaciones Artísticas</h2>
-                <div class="inicio__actividades-list container">
-                    <div class="inicio__actividades-item">
-                        <img src="img/image1.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image2.png" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image3.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image4.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                </div>
-                <button class="btn-3"><a href="">Ver Más</a></button>
+            </section>     
+            <section class="faq container">
+                <h2 class="faq__title">Preguntas Frecuentes</h2>
+                <ul class="faq__list">
+                    <li class="faq__item">
+                        <input type="checkbox" id="p1">
+                        <label for="p1" class="faq__item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="faq__item">
+                        <input type="checkbox" id="p2">
+                        <label for="p2" class="faq__item-title"><h3>¿Puedo adquirir una beca?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="faq__item">
+                        <input type="checkbox" id="p3">
+                        <label for="p3" class="faq__item-title"><h3>¿Qué requisitos necesito para inscribirme?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="faq__item">
+                        <input type="checkbox" id="p4">
+                        <label for="p4" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="faq__item">
+                        <input type="checkbox" id="p5">
+                        <label for="p5" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="faq__item">
+                        <input type="checkbox" id="p6">
+                        <label for="p6" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
+                        <article class="faq__item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                </ul>
             </section>
             <div class="n">
                 <img src="img/Asientos-teatro.jpg" alt="">
                 <div class="n-info container">
-                    <h3>ACADEMIA DE ACTUACIÓN Y DANZASAC ADEMIA
-                    DE ACTUACIÓN Y DANZA SACADEMIA DE ACTUACIÓN</h3>
+                    <h3>Contactanos y forma para de nuestra academia y
+                    se tu el proximo protagonista de nustros shows</h3>
                     <div class="n-btn">
                         <button class="btn-1"><a href="">Contactar</a></button>
                         <button class="btn-2"><a href="">Requisitos</a></button>
@@ -149,6 +146,7 @@
             </div>
             <section class="comentario">
                 <div class="comentario__container container">
+                    <h2>Valoramos tú opinion</h2>
                     <ul class="comentario__list">
                         <li class="comentario__item">
                             <div class="comentario__item-info">
@@ -256,54 +254,7 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="faq container">
-                <h2 class="faq__title">Preguntas Frecuentes</h2>
-                <ul class="faq__list">
-                    <li class="faq__item">
-                        <input type="checkbox" id="p1">
-                        <label for="p1" class="faq__item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p2">
-                        <label for="p2" class="faq__item-title"><h3>¿Puedo adquirir una beca?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p3">
-                        <label for="p3" class="faq__item-title"><h3>¿Qué requisitos necesito para inscribirme?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p4">
-                        <label for="p4" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p5">
-                        <label for="p5" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p6">
-                        <label for="p6" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                </ul>
-            </section>
+            </section>   
         </main>
         <footer>
             <div class="footer">
@@ -396,7 +347,7 @@
                 </ul>
             </div>
             <div class="footer__derechos">
-                <div class="container">
+                <div class="footer__derechos-container">
                     <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
                 </div>
             </div>
