--- a/Pagina Web/nosotros.html
+++ b/Pagina Web/nosotros.html
@@ -30,8 +30,8 @@
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
+                        <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
-                        <li class="header__nav-item"><a href="blog.html">Blog</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -56,87 +56,53 @@
                     <div class="mvv-cre">
                         <h3>Nuestra Fundadora</h3>
                         <h2 class="mvv-title">Ganesis Niño</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisi
-                        cing elit. Libero enim minus impedit recusandae.
-                        maiores voluptate numquam ipsa blanditiis impedit 
-                        recusandae. maiores voluptate numquam ipsditiis.</p>
+                        <p>fundadora, directora y coordinadora de la Academia de Actuación y Danzas “Luces, Cámara y Acción”. 
+                        Artístis profecional con conociminento en diversas áreas culturales como teatro, danza, gimnasia, actuación y canto</p>
                     </div>
                     <div class="mvv1">
                         <ul class="mvv-info">
                             <li class="mvv-22">
                                 <h2>Misión</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Libero enim minus impedit recusandae maiores. 
-                                    Id rerum ea laudantium repellendus, sunt quas 
-                                    provident. Consectetur explicabo voluptas architecto 
-                                    voluptate numquam ipsa blanditiis.</p>
+                                <p>Nuestra misión es ser un centro de formación artística integral que fomenta la creatividad, 
+                                la disciplina y la pasión por las artes escénicas. Ofrecemos una educación de alta calidad en Danza, 
+                                Teatro, Actuación y Gimnasia para estudiantes de todas las edades, desde la niñez hasta la juventud. 
+                                Nos comprometemos a guiar a cada estudiante en su desarrollo personal y artístico, creando 
+                                un ambiente de apoyo donde puedan crecer, expresarse y alcanzar su máximo potencial.</p>
                             </li>
                             <li class="mvv-22">
                                 <h2>Visión</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Libero enim minus impedit recusandae maiores. 
-                                    Id rerum ea laudantium repellendus, sunt quas 
-                                    provident. Consectetur explicabo voluptas architecto 
-                                    voluptate numquam ipsa blanditiis.</p>
-                            </li>
-                            <li class="mvv-22">
-                                <h2>Valores</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Libero enim minus impedit recusandae maiores. 
-                                    Id rerum ea laudantium repellendus, sunt quas 
-                                    provident. Consectetur explicabo voluptas architecto 
-                                    voluptate numquam ipsa blanditiis.</p>
+                                <p>Aspiramos a ser la academia líder en formación artística, reconocida a nivel local y nacional 
+                                por nuestra excelencia pedagógica y por la calidad de nuestros egresados. Buscamos ser un referente 
+                                cultural que inspire a las futuras generaciones de artistas, formando individuos no solo talentosos, 
+                                sino también disciplinados, seguros de sí mismos y con un profundo amor por el arte.</p>
                             </li>
                         </ul>
                     </div>
                 </div>
             </section>
             <section class="nosotros__docentes">
-                <h2 class="nosotros__docentes-title">Nuestro Equipo</h2>
+                <div class="nosotros__docentes-title">
+                <h2>Nuestro Equipo</h2></div>
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
-                        <div class="nosotros__docentes-item-info">
-                            <div class="nosotros__docentes-delante">
-                                <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
-                                <h3>Chavez</h3>
-                            </div>
-                            <div class="nosotros__docentes-atras">
-                                    <p>Lorem ipsum dolor dsdssd sdsd Eveniet!</p>
-                            </div>
-                        </div>
+                        <h3>Juan Pérez</h3>
+                        <img src="img/comentario2.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <h4>Teatro</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <div class="nosotros__docentes-item-info">
-                            <div class="nosotros__docentes-delante">
-                                <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
-                                <h3>Chavez</h3>
-                            </div>
-                            <div class="nosotros__docentes-atras">
-                                    <p>Lorem ipsum dolor dsdssd sdsd Eveniet!</p>
-                            </div>
-                        </div>
+                        <h3>Luis Castro</h3>
+                        <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <h4>Actuación Y Cine</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <div class="nosotros__docentes-item-info">
-                            <div class="nosotros__docentes-delante">
-                                <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
-                                <h3>Chavez</h3>
-                            </div>
-                            <div class="nosotros__docentes-atras">
-                                    <p>Lorem ipsum dolor dsdssd sdsd Eveniet!</p>
-                            </div>
-                        </div>
+                        <h3>Fernanda Gil</h3>
+                        <img src="img/danza.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <h4>Dazna</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <div class="nosotros__docentes-item-info">
-                            <div class="nosotros__docentes-delante">
-                                <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
-                                <h3>Chavez</h3>
-                            </div>
-                            <div class="nosotros__docentes-atras">
-                                    <p>Lorem ipsum dolor dsdssd sdsd Eveniet!</p>
-                            </div>
-                        </div>
+                        <h3>María Lopéz</h3>
+                        <img src="img/comentario1.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <h4>Gimnasia</h4>
                     </div>
                 </div>
             </section>
@@ -232,7 +198,7 @@
                 </ul>
             </div>
             <div class="footer__derechos">
-                <div class="container">
+                <div class="footer__derechos-container">
                     <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
                 </div>
             </div>
