--- a/Pagina Web/clases.html
+++ b/Pagina Web/clases.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <title>Academia LCA - Contacto</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
-        <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-        <link rel="stylesheet" href="styles/styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <title>Academia LCA - Clases</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
+    <link rel="icon" href="img/Logos/LCA.png" type="image/png">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
     <body>
+        <div class="whatsapp">
+            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+        </div>
+        <div class="scroll">
+            <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
+        </div>
         <header>
             <div class="header container" id="e">
                 <input type="checkbox" class="header__checkbox" id="open-menu">
@@ -24,15 +30,71 @@
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
+                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
-
+            <section class="programas__hero">
+            <video src="video/Swan Lake – Dance of the cygnets (The Royal Ballet) - Royal Ballet and Opera (720p, h264).mp4" class="programas__hero-video" autoplay></video>
+            </section>
+            <seccion class="programas__clases">
+                <h2>Formación Artística</h2>
+                <div class="programas__clases-list">
+                    <div class="programas__clases-item" class="programas__clases-item-img" id="danza">
+                        <img src="img/danza.jpg" class="programas__clases-item-img" alt="">
+                        <div class="programas__clases-item-info">
+                            <h2>Danza</h2>
+                            <p>Nuestras clases de danza se centran en el movimiento, el ritmo y la expresión corporal. Los estudiantes 
+                            aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
+                            <div class="programas__clases-item-btn">
+                                <button class="btn-1"><a href="">Contactar</a></button>
+                                <button class="btn-2"><a href="">Requisitos</a></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="programas__clases-item" id="teatro">
+                        <div class="programas__clases-item-info">
+                            <h2>Teatro</h2>
+                            <p>Enfocado en el arte de la representación, esta formación cubre técnicas de improvisación, expresión de emociones, 
+                            dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
+                            <div class="programas__clases-item-btn">
+                                <button class="btn-1"><a href="">Contactar</a></button>
+                                <button class="btn-2"><a href="">Requisitos</a></button>
+                            </div>
+                        </div>
+                        <img src="img/image.png" class="programas__clases-item-img" alt="">
+                    </div>
+                    <div class="programas__clases-item" id="actuacion">
+                        <img src="img/image4.jpg" class="programas__clases-item-img" alt="">
+                        <div class="programas__clases-item-info">
+                            <h2>Actuación</h2>
+                            <p>Enfocado en las habilidades necesarias para la interpretación en diversos formatos, como el cine, la televisión y el teatro. Los estudiantes 
+                            trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
+                            <div class="programas__clases-item-btn">
+                                <button class="btn-1"><a href="">Contactar</a></button>
+                                <button class="btn-2"><a href="">Requisitos</a></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="programas__clases-item">
+                        <div class="programas__clases-item-info">
+                            <h2>Gimnasia</h2>
+                            <p>Las clases de gimnasia combinan fuerza, flexibilidad y gracia. Los 
+                            participantes aprenderán rutinas y técnicas que promueven la agilidad, 
+                            el control del cuerpo y una postura correcta.</p>
+                            <div class="programas__clases-item-btn">
+                                <button class="btn-1"><a href="">Contactar</a></button>
+                                <button class="btn-2"><a href="">Requisitos</a></button>
+                            </div>
+                        </div>
+                        <img src="img/image2.png" class="programas__clases-item-img" alt="">
+                    </div>
+                </div>
+            </seccion>
         </main>
         <footer>
             <div class="footer">
